# RoPP

./: .gitignore  .gitmodules  CMakeLists.txt  FindCPR.cmake  README.md  RoPPConfig.cmake.in
RoPP/: asset.cpp  auth.cpp  avatar.cpp  base.cpp  chat.cpp  game.cpp  group.cpp  helper.cpp  other.cpp  place.cpp  ropp.h  session.cpp  trade.cpp  user.cpp
examples/: asset_example.cpp  asset_example.cpp.output  group_example.cpp  group_example.cpp.output  user_example.cpp  user_example.cpp.output
include/: helper.h  request.hpp  responses.h  ropp.h
include/RoPP/: responses.h  ropp.h
source/: asset.cpp  auth.cpp  avatar.cpp  chat.cpp  game.cpp  group.cpp  helper.cpp  other.cpp  session.cpp  thumbnail.cpp  trade.cpp  user.cpp
